--- a/sass/forms/_forminator.scss
+++ b/sass/forms/_forminator.scss
@@ -167,3 +167,21 @@
         }
     }
 }
+
+.forminator-module-edit-link {
+    color: rgba(white, 0.5);
+    padding: 5px 10px;
+    border: 1px dashed rgba(white, 0.5);
+    border-radius: 5px;
+    text-decoration: none;
+
+    &:hover {
+        color: $color_primary;
+        border-color: $color_primary;
+        background-color: rgba($color_primary, 0.15);
+    }
+
+    &:before {
+        content: 'Admin: ';
+    }
+}
