--- a/sass/layout/_news.scss
+++ b/sass/layout/_news.scss
@@ -48,12 +48,7 @@
                 max-height: 100px;
             }
 
-            .news-content {
-                background-image: linear-gradient(to bottom,
-                        rgba($dark_grey, 0) 0%,
-                        rgba($dark_grey, 100) 33%,
-                        rgba($dark_grey, 100) 100%);
-            }
+            
         }
     }
 
@@ -165,8 +160,13 @@
         justify-content: flex-end;
         align-items: center;
         aspect-ratio: 16/9;
-        min-height: 600px;
-        padding: 140px 0 100px;
+        min-height: 700px;
+        padding: 240px 0 80px;
+
+        @include breakpoint($mediumlarge) {
+            padding: 240px 0 240px;
+            min-height: 600px;
+        }
 
         .post-thumbnail {
             position: absolute;
@@ -188,17 +188,27 @@
 
         .news-content {
             all: unset;
-            max-width: 50%;
             background: rgba($black, 0.9);
             padding: clamp(20px, 5vw, 80px);
             font-size: 20px;
             line-height: 1.5;
-            transform: scale(0.8);
-            transform-origin: right center;
+            width: 100%;
+            
+            @include breakpoint($medium) {
+                max-width: 50%;
+
+            }
+
+            @include breakpoint($large) {
+                max-width: 30%;
+            }
+        }
+
+        .subtitle {
+            display: none;
 
             @include breakpoint($medium) {
-                transform: scale(1);
-                max-width: 30%;
+                display: block;
             }
         }
 
@@ -214,10 +224,21 @@
 
         .entry-content {
             display: unset;
+
+            @include breakpoint($medium) {
+            }
         }
 
         .entry-footer {
             font-size: 18px;
+        }
+
+
+
+        &:hover {
+            .entry-footer {
+                max-height: unset;
+            }
         }
 
         .read-more {
@@ -275,6 +296,12 @@
         }
 
         &:hover {
+            .news-content {
+                background-image: linear-gradient(to bottom,
+                        rgba($dark_grey, 0) 0%,
+                        rgba($dark_grey, 100) 33%,
+                        rgba($dark_grey, 100) 100%);
+            }
 
             &:before,
             &:after {
