--- a/sass/layout/_career-single.scss
+++ b/sass/layout/_career-single.scss
@@ -68,7 +68,7 @@
     }
 
     .job-description {
-        padding: 60px clamp(10px, 5vw, 80px) 0;
+        padding: 60px clamp(55px, 10vw, 110px) 0;
         position: relative;
         font-size: 20px;
 
@@ -97,7 +97,7 @@
             }
         }
 
-        a:not(.fv-button) {
+        a:not(.fv-button, .forminator-module-edit-link) {
             color: $color_primary;
             text-decoration: underline;
             font-weight: 700;
