--- a/sass/layout/_game-single.scss
+++ b/sass/layout/_game-single.scss
@@ -49,7 +49,8 @@
         display: flex;
         flex-direction: column;
         align-items: stretch;
-        background-color: $black;
+        background-color: #1C1C1D;
+        filter: drop-shadow(0 10px 10px rgba($black, 0.5));
 
         @include breakpoint($mediumlarge) {
             flex-direction: row;
