--- a/sass/style.scss
+++ b/sass/style.scss
@@ -39,6 +39,7 @@ Text Domain: dekiru
 	'layout/hero-banner',
 	'layout/about',
 	'layout/news',
+	'layout/search',
 	'layout/games',
 	'layout/game-single',
 	'layout/careers',
