style: Add position fixed to search results overlay

--- a/sass/layout/_search.scss
+++ b/sass/layout/_search.scss
@@ -40,6 +40,7 @@ body.search-results {
     filter: grayscale(100%);
     opacity: 0.2;
     mix-blend-mode: multiply;
+    position: fixed;
   }
 
   .site-main {
