--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,6 +45,7 @@ Text Domain: dekiru
 	'layout/careers',
 	'layout/career-single',
 	'layout/contact',
+	'layout/faqs',
 	'layout/newsletter',
 	'layout/pages',
 	'layout/posts',
