--- a/sass/typography/_copy.scss
+++ b/sass/typography/_copy.scss
@@ -12,7 +12,9 @@ dfn, cite, em, i {
 }
 
 blockquote {
-	margin: 0 1.5em;
+	// margin: 0 1.5em 1.5em;
+	padding: 0 1.5em 1.5em;
+	border-left: 1px solid $color_primary;
 }
 
 address {
