--- a/sass/layout/_posts.scss
+++ b/sass/layout/_posts.scss
@@ -31,6 +31,30 @@
     .entry-content {
         background-color: $near_black;
         padding: clamp(1rem, 5vw, 2rem) clamp(20px, 10vw, 80px);
+
+        h1, h2, h3, h4, h5, h6 {
+            line-height: 1;
+        }
+
+        h2 {
+            font-size: 3em;
+        }
+
+        h3 {
+            font-size: 2.5em;
+        }
+
+        h4 {
+            font-size: 2.25em;
+        }
+
+        h5 {
+            font-size: 2em;
+        }
+
+        h6 {
+            font-size: 1.75em;
+        }
     }
 
     .entry-meta {
