unbold line items

--- a/sass/layout/_posts.scss
+++ b/sass/layout/_posts.scss
@@ -117,7 +117,7 @@
 
     ul, ol {
         color: $off_white;
-        font-weight: 700;
+        // font-weight: 700;
         padding: 0 0 0 2em;
         margin: 0 0 2em 0;
     }
