Adjust layout of news section in _news.scss and search form in _search.scss

--- a/sass/layout/_news.scss
+++ b/sass/layout/_news.scss
@@ -354,6 +354,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    gap: 20px;
 }
 
 body[class*='paged-'] {
