--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -151,7 +151,7 @@
 .news-scroll {
     background-color: $black;
     position: relative;
-    z-index:+100;
+    z-index: -90;
 
     .news-block {
         @include breakpoint($mediumlarge) {
