Adjust display of social icons in site header and footer

--- a/sass/layout/_social.scss
+++ b/sass/layout/_social.scss
@@ -24,6 +24,10 @@
         display: none;
     }
 
+    .site-header & {
+        display: none;
+    }
+
     .site-footer & {
         img {
             height: 40px;
