--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -86,7 +86,7 @@
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
-			gap: $grid-gap;
+			gap: calc($grid-gap / 2);
 			background-color: rgba(0, 0, 0, 0.95);
 			position: absolute;
 			top: 0;
@@ -95,9 +95,24 @@
 			height: 100vh;
 			font-size: 32px;
 
+			li {
+				&.current-menu-item,
+				&.current-page-ancestor  {
+					a {
+						&:before {
+							filter: invert(1);
+							transform: rotate(180deg) translate(50%, 100%);
+							bottom: -16px;
+							z-index: 2;
+						}
+					}
+				}
+
+			}
+
 			a {
 				color: $off_white;
-				padding: 20px;
+				padding: 10px;
 			}
 		}
 
