--- a/sass/layout/_hero-banner.scss
+++ b/sass/layout/_hero-banner.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: -28px;
-    height: 60vh;
+    height: 96dvh;
     
     @include breakpoint($mediumlarge) {
         height: unset;
