--- a/sass/layout/_social.scss
+++ b/sass/layout/_social.scss
@@ -30,7 +30,11 @@
 
     .site-footer & {
         img {
-            height: 40px;
+            height: 32px;
+
+            @include breakpoint($mediumlarge) {
+                height: 40px;
+            }
         }
         
         a {
