Adjust height and order of news section in _home.scss

--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -84,6 +84,7 @@
         // outline: 1px dotted #faf;
         
         @include breakpoint($mediumlarge) {
+            height: unset;
             order: 2;
             width: 50vw;
         }
