--- a/sass/layout/_social.scss
+++ b/sass/layout/_social.scss
@@ -1,7 +1,9 @@
 .social-links {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
     align-items: center;
+    justify-content: center;
     padding: 0;
     margin-bottom: 0;
     list-style-type: none;
