--- a/sass/layout/_social.scss
+++ b/sass/layout/_social.scss
@@ -4,7 +4,7 @@
     gap: 20px;
     align-items: center;
     justify-content: center;
-    padding: 0;
+    padding: 0 20px;
     margin-bottom: 0;
     list-style-type: none;
 
