--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,13 +5,17 @@
     font-size: 18px;
 
     display:flex;
-    gap: 40px;
+    gap: 20px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     padding-top: 100px;
     position: relative;
+
+    @include breakpoint($medium) {
+        gap: 40px;
+    }
 
     &:before {
         content: '';
@@ -65,12 +69,16 @@
             flex-wrap: wrap;
             justify-content: center;
             flex-direction: row;
-            column-gap: 20px;
+            column-gap: 10px;
             row-gap: 10px;
             list-style-type: none;
             padding: 0;
             margin: 0;
             padding: 0 $grid-gap;
+
+            @include breakpoint($medium) {
+                column-gap: 20px;
+            }
         }
 
         .menu-item {
@@ -79,7 +87,11 @@
                 &:before {
                     content: '|';
                     color: #9D968C;
-                    margin-right: 20px;
+                    margin-right: 10px;
+
+                    @include breakpoint($medium) {
+                        margin-right: 20px;
+                    }
                 }
             }
         }
