--- a/sass/layout/_base.scss
+++ b/sass/layout/_base.scss
@@ -51,6 +51,13 @@ strong {
 	margin: 0 auto;
 }
 
+iframe,
+video,
+embed {
+	width: 100%;
+	height: auto;
+}
+
 .background-image {
 	position: absolute;
 	top: 0;
@@ -71,17 +78,17 @@ strong {
 }
 
 .mfp-wrap {
-    backdrop-filter: blur(15px);
+	backdrop-filter: blur(15px);
 }
 
 :root {
-    --swiper-pagination-bottom: 30px;
-    --swiper-pagination-bullet-height:8px;
-    --swiper-pagination-bullet-size: 8px;
-    --swiper-pagination-bullet-inactive-color: #{$color_primary};
-    --swiper-pagination-color: #{$color_primary};
-    --swiper-theme-color: #{$color_primary};
-    --swiper-pagination-bullet-horizontal-gap: 0;
+	--swiper-pagination-bottom: 30px;
+	--swiper-pagination-bullet-height:8px;
+	--swiper-pagination-bullet-size: 8px;
+	--swiper-pagination-bullet-inactive-color: #{$color_primary};
+	--swiper-pagination-color: #{$color_primary};
+	--swiper-theme-color: #{$color_primary};
+	--swiper-pagination-bullet-horizontal-gap: 0;
 	--swiper-pagination-bullet-inactive-color: #{$color_primary};
 	--swiper-theme-color: #{$color_primary};
 	--swiper-pagination-bullet-horizontal-gap: 1px;
