--- a/sass/layout/_news.scss
+++ b/sass/layout/_news.scss
@@ -359,8 +359,16 @@
 
 // body[class*='paged-'],
 body.archive {
-    .site-main.news {
-        padding-top: 120px;
+
+    .site-main {
+        .news {
+            padding-top: 120px;
+        }
+
+        .navigation {
+            width: 100%;
+            padding: 0 20px 20px;
+        }
     }
 }
 
