Update ordered list color in posts layout for better visibility

--- a/sass/layout/_posts.scss
+++ b/sass/layout/_posts.scss
@@ -117,6 +117,7 @@
 	ol {
 		// color: $off_white;
 		// font-weight: 700;
+		color: rgba($off_white, 0.6);
 		padding: 0 0 0 2em;
 		margin: 0 0 2em 0;
 	}
