--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,244 +1,259 @@
 body.page-template-template-about {
-    background-color: $black;
+	background-color: $black;
 }
 
 .about-intro {
-    position: relative;
-    text-align: center;
-    font-size: clamp(1rem, 0.8333rem + 0.4444vw, 1.25rem); // 16px - 20px
-    background-image: linear-gradient(to bottom, $black, $dark_grey);
-    padding: 280px 0 300px;
-    overflow: hidden;
+	position: relative;
+	text-align: center;
+	font-size: clamp(1rem, 0.8333rem + 0.4444vw, 1.25rem); // 16px - 20px
+	background-image: linear-gradient(to bottom, $black, $dark_grey);
+	padding: 280px 0 300px;
+	overflow: hidden;
 
-    .section-content {
-        padding: 0 calc($grid-gap / 2);
-        position: relative;
-        z-index: 2;
-    }
+	.section-content {
+		padding: 0 calc($grid-gap / 2);
+		position: relative;
+		z-index: 2;
+	}
 
-    .background-image {
-        background-color: $black;
-        z-index: 1;
-        filter: grayscale(100%);
-        opacity: 0.25;
-        pointer-events: none;
-        
-        img {
-            mix-blend-mode: overlay; 
-        }
-    }
+	.background-image {
+		background-color: $black;
+		z-index: 1;
+		filter: grayscale(100%);
+		opacity: 0.25;
+		pointer-events: none;
 
-    .subtitle {
-        color: $color_primary;
-        text-transform: uppercase;
-        font-weight: 700;
-        font-size: 24px;
-        line-height: 1;
-        margin-bottom: 0;
-    }
+		img {
+			mix-blend-mode: overlay;
+		}
+	}
 
-    .title {
-        text-transform: uppercase;
-        font-size: clamp(4rem, 2.75rem + 3.3333vw, 5.875rem); // 44px - 64px
-        line-height: 1;
-        margin-bottom: 20px;
-    }
+	.subtitle {
+		color: $color_primary;
+		text-transform: uppercase;
+		font-weight: 700;
+		font-size: 24px;
+		line-height: 1;
+		margin-bottom: 0;
+	}
 
-    .copy {
-        max-width: 540px;
-        margin: 0 auto;
-        // opacity: 0.6;
-        color: rgba($off_white, 0.6);
+	.title {
+		text-transform: uppercase;
+		font-size: clamp(4rem, 2.75rem + 3.3333vw, 5.875rem); // 44px - 64px
+		line-height: 1;
+		margin-bottom: 20px;
+	}
 
-        @include breakpoint($mediumlarge) {
-            max-width: 720px;
-        }
-    }
+	.copy {
+		max-width: 540px;
+		margin: 0 auto;
+		// opacity: 0.6;
+		color: rgba($off_white, 0.6);
 
-    &:before {
-        content: '';
-        display: block;
-        position: absolute;
-        top: 150px;
-        left: 0;
-        width: 33%;
-        min-width: 200px;
-        height: auto;
-        aspect-ratio: 1/1;
-        background: url(assets/images/pixel-foxy.svg) center no-repeat;
-        background-size: contain;
-        transform: rotate(30deg) translateX(-27%);
+		@include breakpoint($mediumlarge) {
+			max-width: 720px;
+		}
+	}
 
-        @include breakpoint($mediumlarge) {
-            // top: 50%;
-            min-width: 300px;
-        }
+	&:before {
+		content: '';
+		display: block;
+		position: absolute;
+		top: 150px;
+		left: 0;
+		width: 33%;
+		min-width: 200px;
+		height: auto;
+		aspect-ratio: 1/1;
+		background: url(assets/images/pixel-foxy.svg) center no-repeat;
+		background-size: contain;
+		transform: rotate(30deg) translateX(-27%);
 
-        @include breakpoint($large) {
-            min-width: 500px;
-            max-width: 660px;
-            top: unset;
-            // bottom: -50px;
-            // transform: rotate(30deg) translate(-27%, -50%);
-        }
-    }
+		@include breakpoint($mediumlarge) {
+			// top: 50%;
+			min-width: 300px;
+		}
+
+		@include breakpoint($large) {
+			min-width: 500px;
+			max-width: 660px;
+			top: unset;
+			// bottom: -50px;
+			// transform: rotate(30deg) translate(-27%, -50%);
+		}
+	}
 }
 
 .the-team {
-    padding-bottom: calc($grid-gap * 4);
-    margin-top: -300px;
-    position: relative;
-    z-index: +1;
+	padding-bottom: calc($grid-gap * 4);
+	margin-top: -300px;
+	position: relative;
+	z-index: +1;
 
-    .section-content {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: $grid-gap;
-        padding: 0 calc($grid-gap / 2);
-    }
+	.section-content {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		gap: $grid-gap;
+		padding: 0 calc($grid-gap / 2);
+	}
 
-    .team-member {
-        max-width: 360px;
-        background-color: $black;
-        text-align: center;
-        font-size: clamp(1rem, 0.8333rem + 0.4444vw, 1.25rem); // 16px - 20px
-        position: relative;
-        z-index: +1;
-        width: 100%;
+	.team-member {
+		max-width: 360px;
+		background-color: $black;
+		text-align: center;
+		font-size: clamp(1rem, 0.8333rem + 0.4444vw, 1.25rem); // 16px - 20px
+		position: relative;
+		z-index: +1;
+		width: 100%;
 
-        @include breakpoint($medium) {
-            width: calc((100% / 2) - $grid-gap + ($grid-gap / 2));
-        }
+		@include breakpoint($medium) {
+			width: calc((100% / 2) - $grid-gap + ($grid-gap / 2));
+		}
 
-        @include breakpoint($mediumlarge) {
-            width: calc((100% / 3) - $grid-gap + ($grid-gap / 3));
-        }
+		@include breakpoint($mediumlarge) {
+			width: calc((100% / 3) - $grid-gap + ($grid-gap / 3));
+		}
 
-        @include breakpoint($large) {
-            width: calc((100% / 4) - $grid-gap + ($grid-gap / 4));
-        }
+		@include breakpoint($large) {
+			width: calc((100% / 4) - $grid-gap + ($grid-gap / 4));
+		}
 
-        .photo {
-            position: relative;
-            // margin-bottom: calc($grid-gap * 2);
-            margin-bottom: $grid-gap;
-            // padding: 15px;
-            border: 15px solid $black;
-            overflow: hidden;
+		.photo {
+			position: relative;
+			// margin-bottom: calc($grid-gap * 2);
+			margin-bottom: $grid-gap;
+			// padding: 15px;
+			border: 15px solid $black;
+			overflow: hidden;
 
-            img {
-                width: 100%;
-                height: auto;
-            }
-        }
+			img {
+				width: 100%;
+				height: auto;
+			}
+		}
 
-        .placeholder {
-            position: relative;
-            aspect-ratio: 1/1;
-            background-image:
-                url(assets/images/pixel-foxy.png),
-                radial-gradient(circle, rgba($off_white, 0.25) 0%, $black 100%);
-            background-size: 100px auto, cover;
-            background-repeat: no-repeat;
-            background-position: center;
-        }
+		.placeholder {
+			position: relative;
+			aspect-ratio: 1/1;
+			background-image:
+				url(assets/images/pixel-foxy.png),
+				radial-gradient(circle, rgba($off_white, 0.25) 0%, $black 100%);
+			background-size: 100px auto, cover;
+			background-repeat: no-repeat;
+			background-position: center;
+		}
 
-        .social-link {
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            max-width: 82px;
-            width: 25%;
-            aspect-ratio: 1/1;
-            background: url(assets/images/stepped-corner.svg) right bottom no-repeat;
-            background-size: cover;
-            text-indent: -9999px;
-            transform-origin: right bottom;
-            transition: all 0.25s ease-in-out;
-            overflow: hidden;
+		.social-link {
+			position: absolute;
+			bottom: 0;
+			right: 0;
+			max-width: 82px;
+			width: 25%;
+			aspect-ratio: 1/1;
+			background: url(assets/images/stepped-corner.svg) right bottom no-repeat;
+			background-size: cover;
+			text-indent: -9999px;
+			transform-origin: right bottom;
+			transition: all 0.25s ease-in-out;
+			overflow: hidden;
 
-            &:hover {
-                transform: scale(1.25);
-            }
+			&:hover {
+				transform: scale(1.25);
+			}
 
-            &:after {
-                content: '';
-                display: block;
-                position: absolute;
-                top: 70%;
-                left: 70%;
-                transform: translate(-50%, -50%);
-                width: 22px;
-                height: 22px;
-                background-size: cover;
-                filter: brightness(0) saturate(100%) invert(93%) sepia(18%) saturate(159%) hue-rotate(350deg) brightness(98%) contrast(90%);
-            }
-        }
+			&:after {
+				content: '';
+				display: block;
+				position: absolute;
+				top: 70%;
+				left: 70%;
+				transform: translate(-50%, -50%);
+				width: 22px;
+				height: 22px;
+				background-size: cover;
+				filter: brightness(0) saturate(100%) invert(93%) sepia(18%) saturate(159%) hue-rotate(350deg) brightness(98%) contrast(90%);
+			}
+		}
 
-        a[href*='linkedin'] {
-            &:after {
-                background-image: url(assets/images/icon-linkedin.svg);
-            }
-        }
-        a[href*='facebook'] {
-            &:after {
-                background-image: url(assets/images/icon-facebook.svg);
-            }
-        }
-        a[href*='x.com'] {
-            &:after {
-                background-image: url(assets/images/icon-x.svg);
-            }
-        }
-        a[href*='youtube'] {
-            &:after {
-                background-image: url(assets/images/icon-youtube.svg);
-            }
-        }
+		a[href*='linkedin'] {
+			&:after {
+				background-image: url(assets/images/icon-linkedin.svg);
+			}
+		}
 
-        .name {
-            font-size: clamp(1.75rem, 1.5rem + 0.6667vw, 2.125rem); // 28px - 34px
-            margin-bottom: 0;
-            line-height: 0.9;
-        }
+		a[href*='facebook'] {
+			&:after {
+				background-image: url(assets/images/icon-facebook.svg);
+			}
+		}
 
-        .position {
-            color: $color_primary;
-            font-size: clamp(1.125rem, 0.875rem + 0.6667vw, 1.5rem);
-            font-weight: 700;
-            line-height: 0.9;
-        }
+		a[href*='x.com'] {
+			&:after {
+				background-image: url(assets/images/icon-x.svg);
+			}
+		}
 
-        .bio {
-            opacity: 0.6;
-        }
-    }
+		a[href*='youtube'] {
+			&:after {
+				background-image: url(assets/images/icon-youtube.svg);
+			}
+		}
+
+		a[href*='bsky'] {
+			&:after {
+				background-image: url(assets/images/icon-bluesky.svg);
+			}
+		}
+
+		a[href*='itch'] {
+			&:after {
+				background-image: url(assets/images/icon-itch.svg);
+			}
+		}
+
+		.name {
+			font-size: clamp(1.75rem, 1.5rem + 0.6667vw, 2.125rem); // 28px - 34px
+			margin-bottom: 0;
+			line-height: 0.9;
+		}
+
+		.position {
+			color: $color_primary;
+			font-size: clamp(1.125rem, 0.875rem + 0.6667vw, 1.5rem);
+			font-weight: 700;
+			line-height: 0.9;
+		}
+
+		.bio {
+			opacity: 0.6;
+		}
+	}
 }
 
 .careers-banner {
-    text-align: center;
-    background-color: $dark_grey;
-    padding: clamp(50px, 5vw, 100px) 0 clamp(80px, 5vw, 160px);
+	text-align: center;
+	background-color: $dark_grey;
+	padding: clamp(50px, 5vw, 100px) 0 clamp(80px, 5vw, 160px);
 
-    .section-content {
-        max-width: 750px;
-        font-size: clamp(1.125rem, 0.875rem + 0.6667vw, 1.5rem);
-        padding: 0 $grid-gap;
-    }
+	.section-content {
+		max-width: 750px;
+		font-size: clamp(1.125rem, 0.875rem + 0.6667vw, 1.5rem);
+		padding: 0 $grid-gap;
+	}
 
-    p:not(.subtitle) {
-        color: rgba($off_white, 0.6);
-        padding: 0 clamp(40px, 2vw, 80px);
-    }
+	p:not(.subtitle) {
+		color: rgba($off_white, 0.6);
+		padding: 0 clamp(40px, 2vw, 80px);
+	}
 
-    .title {
-        // font-size: clamp(4.75rem, 4rem + 2vw, 5.875rem);
-        font-size: clamp(2.625rem, 1.7083rem + 3.0556vw, 4rem); // 42px - 64px
-        line-height: 0.8;
+	.title {
+		// font-size: clamp(4.75rem, 4rem + 2vw, 5.875rem);
+		font-size: clamp(2.625rem, 1.7083rem + 3.0556vw, 4rem); // 42px - 64px
+		line-height: 0.8;
 
-        @include breakpoint($medium) {
-            font-size: clamp(4.75rem, 4rem + 2vw, 5.875rem); // 76px - 94px
-        }
-    }
+		@include breakpoint($medium) {
+			font-size: clamp(4.75rem, 4rem + 2vw, 5.875rem); // 76px - 94px
+		}
+	}
 }
