Add background-repeat property to about page styles for improved image rendering

--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -172,6 +172,7 @@ body.page-template-template-about {
 				width: 22px;
 				height: 22px;
 				background-size: contain;
+				background-repeat: no-repeat;
 				filter: brightness(0) saturate(100%) invert(93%) sepia(18%) saturate(159%) hue-rotate(350deg) brightness(98%) contrast(90%);
 			}
 		}
