--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -131,6 +131,13 @@ body.page-template-template-about {
 				width: 100%;
 				height: auto;
 			}
+			
+			&:hover {
+				.team-social-links {
+					transform: translateX(0);
+				}
+
+			}
 		}
 
 		.placeholder {
@@ -144,74 +151,134 @@ body.page-template-template-about {
 			background-position: center;
 		}
 
-		.social-link {
+		.team-social-links {
+			background-color: $color_primary;
 			position: absolute;
+			padding-right: 10px;
 			bottom: 0;
 			right: 0;
-			max-width: 82px;
-			width: 25%;
-			aspect-ratio: 1/1;
-			background: url(assets/images/stepped-corner.svg) right bottom no-repeat;
-			background-size: cover;
-			text-indent: -9999px;
-			transform-origin: right bottom;
-			transition: all 0.25s ease-in-out;
-			overflow: hidden;
+			display: flex;
+			gap: 10px;
+			transform: translateX(100%);
+			transition: transform 0.25s ease-in-out;
 
 			&:hover {
-				transform: scale(1.25);
+				transform: translateX(0);
 			}
 
-			&:after {
+			a {
+				padding: 18px 5px;
+				transition: all 0.25s ease-in-out;
+
+				&:hover {
+					filter: invert(1);
+				}
+			}
+
+			img {
+				width: auto;
+				height: 24px;
+			}
+
+			&:before {
 				content: '';
 				display: block;
 				position: absolute;
-				top: 70%;
-				left: 70%;
-				transform: translate(-50%, -50%);
-				width: 22px;
-				height: 22px;
+			}
+
+			&:before {
+				top: 0;
+				left: 1px;
+				width: auto;
+				height: 100%;
+				aspect-ratio: 1/1;
+				transform: translateX(-100%);
+				background: url(assets/images/arrow-left.svg) right bottom no-repeat;
 				background-size: contain;
-				background-repeat: no-repeat;
-				filter: brightness(0) saturate(100%) invert(93%) sepia(18%) saturate(159%) hue-rotate(350deg) brightness(98%) contrast(90%);
+				transform-origin: right bottom;
+				transition: all 0.25s ease-in-out;
 			}
+
+			// &:after {
+			// 	bottom: 15px;
+			// 	left: -20px;
+			// 	transform: rotate(90deg);
+			// 	width: 30px;
+			// 	height: 30px;
+			// 	background: url(assets/images/arrow-down.svg) center no-repeat;
+			// 	background-size: contain;
+			// 	filter: brightness(0);
+			// }
 		}
 
-		a[href*='linkedin'] {
-			&:after {
-				background-image: url(assets/images/icon-linkedin.svg);
-			}
-		}
+		// .social-link {
+		// 	position: absolute;
+		// 	bottom: 0;
+		// 	right: 0;
+		// 	max-width: 82px;
+		// 	width: 25%;
+		// 	aspect-ratio: 1/1;
+		// 	background: url(assets/images/stepped-corner.svg) right bottom no-repeat;
+		// 	background-size: cover;
+		// 	text-indent: -9999px;
+		// 	transform-origin: right bottom;
+		// 	transition: all 0.25s ease-in-out;
+		// 	overflow: hidden;
 
-		a[href*='facebook'] {
-			&:after {
-				background-image: url(assets/images/icon-facebook.svg);
-			}
-		}
+		// 	&:hover {
+		// 		transform: scale(1.25);
+		// 	}
 
-		a[href*='x.com'] {
-			&:after {
-				background-image: url(assets/images/icon-x.svg);
-			}
-		}
+		// 	&:after {
+		// 		content: '';
+		// 		display: block;
+		// 		position: absolute;
+		// 		top: 70%;
+		// 		left: 70%;
+		// 		transform: translate(-50%, -50%);
+		// 		width: 22px;
+		// 		height: 22px;
+		// 		background-size: contain;
+		// 		background-repeat: no-repeat;
+		// 		filter: brightness(0) saturate(100%) invert(93%) sepia(18%) saturate(159%) hue-rotate(350deg) brightness(98%) contrast(90%);
+		// 	}
+		// }
 
-		a[href*='youtube'] {
-			&:after {
-				background-image: url(assets/images/icon-youtube.svg);
-			}
-		}
+		// a[href*='linkedin'] {
+		// 	&:after {
+		// 		background-image: url(assets/images/icon-linkedin.svg);
+		// 	}
+		// }
 
-		a[href*='bsky'] {
-			&:after {
-				background-image: url(assets/images/icon-bluesky.svg);
-			}
-		}
+		// a[href*='facebook'] {
+		// 	&:after {
+		// 		background-image: url(assets/images/icon-facebook.svg);
+		// 	}
+		// }
 
-		a[href*='itch'] {
-			&:after {
-				background-image: url(assets/images/icon-itch.svg);
-			}
-		}
+		// a[href*='x.com'] {
+		// 	&:after {
+		// 		background-image: url(assets/images/icon-x.svg);
+		// 	}
+		// }
+
+		// a[href*='youtube'] {
+		// 	&:after {
+		// 		background-image: url(assets/images/icon-youtube.svg);
+		// 	}
+		// }
+
+		// a[href*='bsky'] {
+		// 	&:after {
+		// 		background-image: url(assets/images/icon-bluesky.svg);
+		// 	}
+		// }
+
+		// a[href*='itch'] {
+		// 	&:after {
+		// 		background-image: url(assets/images/icon-itch.svg);
+		// 	}
+		// }
 
 		.name {
 			font-size: clamp(1.75rem, 1.5rem + 0.6667vw, 2.125rem); // 28px - 34px
