Add hidden class for accessibility and update newsletter form with Mailchimp integration

--- a/sass/forms/_forminator.scss
+++ b/sass/forms/_forminator.scss
@@ -90,6 +90,7 @@
         font-size: 20px;
         -webkit-appearance: none;
         -moz-appearance: none;
+        appearance: none;
         background: $black url(assets/images/arrow-down-orange.svg) center right 10px no-repeat;
         background-size: 24px 16px;
     }
