--- a/sass/layout/_newsletter.scss
+++ b/sass/layout/_newsletter.scss
@@ -14,7 +14,7 @@
         position: relative;
         // @include outline;
 
-        @include breakpoint($mediumlarge) {
+        @include breakpoint($large) {
             padding: 0 calc($grid-gap /2);
             max-width: $max-width;
             display: flex;
@@ -30,7 +30,7 @@
     
         // .headlines,
         .copy {
-            @include breakpoint($mediumlarge) {
+            @include breakpoint($large) {
                 width: calc(100/5 * 2%);
             }
         }
@@ -85,8 +85,9 @@
     .title {
         line-height: 0.8;
         text-transform: uppercase;
-        // font-size: clamp(4rem, 2.75rem + 3.3333vw, 5.875rem); // 44px - 94px
-        font-size: clamp(2rem, -0.5833rem + 8.6111vw, 5.875rem);
+        font-size: clamp(4rem, 2.75rem + 3.3333vw, 5.875rem); // 44px - 94px
+        // font-size: clamp(2rem, -0.5833rem + 8.6111vw, 5.875rem); // 20px - 94px
+        // font-size: clamp(1.25rem, -1.8333rem + 10.2778vw, 5.875rem);
         margin-bottom: 0;
     }
 }
@@ -109,28 +110,83 @@
         color: rgba($off_white, 0.6);
     }
 
-    .forminator-ui.forminator-custom-form {
-        gap: 0;
+    // .forminator-ui.forminator-custom-form {
+    //     gap: 0;
+    // }
+
+    // .forminator-label {
+    //     display: none !important;
+    // }
+
+    // .forminator-row-last {
+    //     width: unset !important;
+    //     padding-top: 20px;
+    //     text-align: right;
+
+    //     @include breakpoint($large) {
+    //         padding-top: 0;
+    //         position: absolute;
+    //         top: 0;
+    //         right: 0;
+    //     }
+    // }
+
+    // .forminator-button {
+    //     min-width: unset !important;
+    // }
+
+    // mailchimp
+    .mc-field-group {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        width: 100%;
+        align-items: center;
+        position: relative;
+
+        @include breakpoint($smallmedium) {
+            flex-direction: row;
+            gap: 0;
+        }
+    }
+    label {
+        font-weight: 700;
+        text-transform: uppercase;
+        font-size: 20px;
+        // display: block;
+        padding-bottom: 10px;
     }
 
-    .forminator-label {
-        display: none !important;
-    }
-
-    .forminator-row-last {
-        width: unset !important;
-        padding-top: 20px;
-        text-align: right;
-
-        @include breakpoint($large) {
-            padding-top: 0;
-            position: absolute;
-            top: 0;
-            right: 0;
+    input[type='text'],
+    input[type='email'] {
+        height: 58px;
+        background: $black;
+        color: $off_white;
+        border: none;
+        padding: 10px;
+        width: 100%;
+        font-size: 20px;
+        
+        &:focus {
+            outline: none;
         }
     }
 
-    .forminator-button {
-        min-width: unset !important;
+    input[type='email'] {
+        @include breakpoint($smallmedium) {
+            width: calc(100% - 118px);
+        }
+    }
+
+    .button {
+        @extend .fv-button;
+        
+        @include breakpoint($smallmedium) {
+            min-width: unset !important;
+            position: absolute;
+            top: 50%;
+            right: 0;
+            transform: translateY(-50%);
+        }
     }
 }
