--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -1,6 +1,22 @@
-.rajdhani {
-    font-family: "Rajdhani", sans-serif;
+// .rajdhani {
+//     font-family: "Rajdhani", sans-serif;
+//     font-weight: 400;
+//     font-style: normal;
+// }
+
+@font-face {
+    font-family: 'Rajdhani', sans-serif;
+    src: url('assets/fonts/Rajdhani-Regular.woff2') format('woff2');
     font-weight: 400;
+    font-display: swap;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Rajdhani', sans-serif;
+    src: url('assets/fonts/Rajdhani-Rajdhani-Bold.woff2') format('woff2');
+    font-weight: 700;
+    font-display: swap;
     font-style: normal;
 }
 
