--- a/sass/variables-site/_typography.scss
+++ b/sass/variables-site/_typography.scss
@@ -1,4 +1,4 @@
-$font__main: "Rajdhani", 'Helvetica Neue', Arial, sans-serif;
+$font__main: 'Rajdhani', 'Helvetica Neue', Arial, sans-serif;
 $font__bitmap: "RetroGaming", sans-serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
