Refactor font-face declarations to remove redundant font-family specification

--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Rajdhani';
     src: url('assets/fonts/Rajdhani-Regular.woff2') format('woff2');
     font-weight: 400;
     font-display: swap;
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Rajdhani';
     src: url('assets/fonts/Rajdhani-Bold.woff2') format('woff2');
     font-weight: 700;
     font-display: swap;
