--- a/sass/forms/_forminator.scss
+++ b/sass/forms/_forminator.scss
@@ -182,6 +182,10 @@
         background-color: rgba($color_primary, 0.15);
     }
 
+    &:visited {
+        color: rgba(white, 0.5);
+    }
+
     &:before {
         content: 'Admin: ';
     }
