Remove unnecessary !important from display property in Forminator styles

--- a/sass/forms/_forminator.scss
+++ b/sass/forms/_forminator.scss
@@ -46,7 +46,7 @@
         }
 
         &.forminator-row-last {
-            display: block !important;
+            display: block;
         }
     
         @include breakpoint($mediumlarge) {
